--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="navbar-header">
             <div class="blueFill"></div>
             <div class="navLogoContainer">
-                <img src="images/logo.png" class="img-fluid" alt="Responsive image">
+                <img src="images/Logo.png" class="img-fluid" alt="Responsive image">
                 <p>INSIGHTS AS A SERVICE</p>
             </div>
             <img src="images/logoAngle.png" class="img-fluid logoAngle" alt="Responsive image">
@@ -64,7 +64,6 @@
             </ul>
         </div>
     </nav>
-
     <section class="hero container-fluid">
         <div class="heroStatement">
             <p>DELIVERING INSIGHTS FOR <span> BETTER INVESTMENT</span> DECISION-MAKING</p>
@@ -72,7 +71,171 @@
         <div class="btnWrapper container">
             <button></button>
         </div>
+        <div>
+            <img src="#">
+            <h2>DATA</h2>
+            <p>All relevant information in one location.</p>
+        </div>
+        <div>
+            <img src="#">
+            <h2>SIGNALS</h2>
+            <p>Notication of events that matter.</p>
+        </div>
+        <div>
+            <img src="#">
+            <h2>INSIGHT</h2>
+            <p>Immediate perspective on companies you care about.</p>
+        </div>
     </section>
+    <!-- start -->
+    <!-- <!-- <div class="products-background">
+        <div>
+            <img src="#">
+            <p>personalize your own signals + maps, perform trend analysis and more</p>
+            <button>energy</button>
+        </div>
+        <div>
+            <img src="#">
+            <p>lorem ipsum test dsklfasldkjflnblkas flkasdjf ksadfkl ;dskldsa jflkasd fklsadj</p>
+            <button>retail</button>
+        </div>
+        <div>
+            <img src="#">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <button>banks</button>
+        </div>
+        <div>
+            <img src="#">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <button>real estate</button>
+        </div>
+    </div>
+    <!-- end-->
+<!--     <section class="media">
+        <div class="newsRoom">
+            <h1>NEWSROOM</h1>
+            <div class="realEstate">
+                <h2>REAL ESTATE</h2>
+                <P>TCO In Uncharted Waters?</P>
+                <p>Disconnected From Reality?</p>
+            </div>
+            <div class="energy">
+                <h2>ENERGY</h2>
+                <P>MUR: Getting A Jump on the Quarter</P>
+                <p>EGN: Assessing Asset Performance.</p>
+            </div>
+            <div class="banks">
+                <h2>BANKS</h2>
+                <P>The Low Velocity Economy Continues</P>
+            </div>
+        </div>
+        <div class="whitePapers">
+            <h1>WHITE PAPERS</h1>
+            <div>
+                <p>CGIS Reclassification & Why you should Care</p>
+            </div>
+            <div>
+                <p>REITS Reclassification Redux</p>
+            </div>
+        </div>
+        <div class="pressReleases">
+            <h1>PRESS RELEASES</h1>
+            <h2>1st PAAS For Real Estate Finacial Insight</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h2>Learn More</h2>
+        </div>
+        <div class="videos">
+            <h1>VIDEOS</h1>
+            <div class="realEstateWebinar">
+                <img src="#">
+                <div>
+                    <h2>Real Estate Webinar</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="whatWeDo">
+                <img src="#">
+                <div>
+                    <h2>What We Do</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="videosFooter">
+                <h1>FOLLOW US</h1>
+                <div>
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="whatIsSignal">
+        <div>
+            <img src="#">
+        </div>
+        <div>
+            <h1>WHAT IS A SIGNAL?</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <button>Learn More</button>
+        </div>
+    </div>
+    <div class="partners">
+        <h1>OUR PARTNERS</h1>
+        <div class="partnersLogos">
+            <div>
+                <img src="#">
+            </div>
+            <div>
+                <img src="#">
+            </div>
+            <div>
+                <img src="#">
+            </div>
+            <div>
+                <img src="#">
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div>
+            LOGO
+            <img src="#">
+        </div>
+        <div class="firstFooterCol">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+        </div>
+        <div class="secondFooterCol">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+        </div>
+        <div class="thirdFooterCol">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+        </div>
+        <div>
+            <form method="GET" action="#">
+                <input type="text">
+                <img src="#">
+            </form>
+            <div class="footerMediaLinks">
+                <img src="#">
+                <img src="#">
+                <img src="#">
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+        </div>
+    </footer> -->
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
