finished mobile version for sections up to media.

--- a/index.html
+++ b/index.html
@@ -183,13 +183,18 @@
             </div>
         </div>
         <div class="papersReleaseContainer col-sm-4">
-            <div class="whitePapers">
-                <h1>WHITE PAPERS</h1>
-                <div>
-                    <p>CGIS Reclassification & Why you should Care</p>
+            <div class="whitePapers row">
+                <div class="paperIconContainer">
+                    <img src="images/paperIcon.png">
+                    <h1>WHITE PAPERS</h1>
                 </div>
-                <div>
-                    <p>REITS Reclassification Redux</p>
+                <div class="wrapper">
+                    <div>
+                        <p>CGIS Reclassification Why you should Care</p>
+                    </div>
+                    <div>
+                        <p>REITS Reclassification Redux</p>
+                    </div>
                 </div>
             </div>
             <div class="pressReleases">
@@ -202,14 +207,14 @@
         <div class="videos col-sm-4">
             <h1>VIDEOS</h1>
             <div class="realEstateWebinar">
-                <img src="#">
+                <img src="images/playButton.png">
                 <div>
                     <h2>Real Estate Webinar</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
             <div class="whatWeDo">
-                <img src="#">
+                <img src="images/playButton.png">
                 <div>
                     <h2>What We Do</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -217,80 +222,87 @@
             </div>
             <div class="videosFooter">
                 <h1>FOLLOW US</h1>
-                <div>
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <img src="images/facebook.png">
+                    </div>
+                    <div class="col-xs-4">
+                        <img src="images/twitter.png">
+                    </div>
+                    <div class="col-xs-4">
+                        <img src="images/linkedin.png">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- <div class="whatIsSignal">
-    <div>
-        <img src="#">
+    <div class="signalBackground">
+        <div class="whatIsSignal">
+            <div>
+                <img src="#">
+            </div>
+            <div>
+                <h1>WHAT IS A SIGNAL?</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <button>Learn More</button>
+            </div>
+        </div>
+        <div class="partners">
+            <h1>OUR PARTNERS</h1>
+            <div class="partnersLogos">
+                <div>
+                    <img src="#">
+                </div>
+                <div>
+                    <img src="#">
+                </div>
+                <div>
+                    <img src="#">
+                </div>
+                <div>
+                    <img src="#">
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        <h1>WHAT IS A SIGNAL?</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button>Learn More</button>
-    </div>
-</div>
-<div class="partners">
-    <h1>OUR PARTNERS</h1>
-    <div class="partnersLogos">
+    <footer>
         <div>
+            LOGO
             <img src="#">
+        </div>
+        <div class="firstFooterCol">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+        </div>
+        <div class="secondFooterCol">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+        </div>
+        <div class="thirdFooterCol">
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
+            <p>Lorem ipsum dolor sit amet, c.</p>
         </div>
         <div>
-            <img src="#">
+            <form method="GET" action="#">
+                <input type="text">
+                <img src="#">
+            </form>
+            <div class="footerMediaLinks">
+                <img src="#">
+                <img src="#">
+                <img src="#">
+            </div>
         </div>
-        <div>
-            <img src="#">
+        <div class="copyright">
+            <p>Lorem ipsum dolor sit amet, c.</p>
         </div>
-        <div>
-            <img src="#">
-        </div>
-    </div>
-</div>
-<footer>
-    <div>
-        LOGO
-        <img src="#">
-    </div>
-    <div class="firstFooterCol">
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-    </div>
-    <div class="secondFooterCol">
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-    </div>
-    <div class="thirdFooterCol">
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-        <p>Lorem ipsum dolor sit amet, c.</p>
-    </div>
-    <div>
-        <form method="GET" action="#">
-            <input type="text">
-            <img src="#">
-        </form>
-        <div class="footerMediaLinks">
-            <img src="#">
-            <img src="#">
-            <img src="#">
-        </div>
-    </div>
-    <div class="copyright">
-        <p>Lorem ipsum dolor sit amet, c.</p>
-    </div>
-</footer>
- -->
+    </footer>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
