minor searchbox fix

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </form>
                     <div class="collapse" id="searchCollapse">
                         <form method="GET" action="#">
-                            <input type="text" name="userSearch" value="Search..">
+                            <input type="text" name="userSearch" placeholder="SEARCH..">
                         </form>
                     </div>
                 </li>
