minor changes to search.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,6 @@
 </head>
 
 <body>
-    <!-- <nav>
-        <div class="row">
-            <div class='col-xs-4'>
-                <img src="public/images/logoAngle.png">
-                <img src="public/images/insight.png">
-            </div>
-
-            <div class='col-xs-8'>
-                
-            </div>
-        </div>
-
-    </nav> -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <div class="blueFill"></div>
@@ -53,11 +40,8 @@
                     <a href="#" class="dropdown">News Room</a>
                 </li>
                 <li class="dropdown">
-                    <form method="GET" action="#">
-                        <input class="mobileSearchBox" type="text" placeholder="SEARCH..">
-                        <div class="searchCircle" data-toggle="collapse" href="#searchCollapse" aria-controls="searchCollapse">
-                        </div>
-                    </form>
+                    <div class="searchCircle" data-toggle="collapse" href="#searchCollapse" aria-controls="searchCollapse">
+                    </div>
                     <div class="collapse" id="searchCollapse">
                         <form method="GET" action="#">
                             <input type="text" name="userSearch" placeholder="SEARCH..">
@@ -204,7 +188,7 @@
             <div class="pressReleases">
                 <h1>PRESS RELEASES</h1>
                 <h2>1st PAAS For Real Estate Finacial Insight</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>DISCERN, the leader in personalized platform-as-a-service (PaaS) for Financial Insight, today announced DISCERN Real Estate, the industry's first platfor-as-a-service that informs</p>
                 <h2 class="learn">Learn More</h2>
             </div>
         </div>
@@ -214,14 +198,14 @@
                 <img src="images/playButton.png">
                 <div>
                     <h2>Real Estate Webinar</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Leverage Housing Data to Lead the Market by 30+Days February, 25 2016</p>
                 </div>
             </div>
             <div class="whatWeDo">
                 <img src="images/playButton.png">
                 <div>
                     <h2>What We Do</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Find out what DISCERN does and how we can provide insights for better investments</p>
                 </div>
             </div>
             <div class="videosFooter">
